Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-33850

For Galera, create sequence with low cache got signal 6 error: [ERROR] WSREP: FSM: no such a transition REPLICATING -> COMMITTED

    XMLWordPrintable

Details

    Description

      Got signal 6 error in 10.6.16 in the following scenario:

      1. CREATE SEQUENCE s INCREMENT=0 cache 100;

      2. CREATE TABLE t2 ( id int primary key default (next value for s), name varchar(50));

      3. Create test.sql file like (see test.sql.zip attached):
      insert into test.t2 (name) values ('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),(
      'AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),
      ('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA')
      ,('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'
      ),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA
      '),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAA
      A'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AA
      AA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('A
      AAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('
      AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),(
      'AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),
      ('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA'),('AAAA');
      insert into test.t2 (name) values ('AAAA')....
      [repeat above line for 1000000 times in the file]

      4. Set autocommit=ON

      5. On both nodes load the test.sql file by running the command:
      mysql -h..... --port.... -u... -p... < test.sql

      if exited with "Deadlock" error, run the it again.

      6. After several tries, get signal 6 error on one of the DB server:
      2024-04-05 14:50:52 4190 [ERROR] WSREP: FSM: no such a transition REPLICATING -> COMMITTED
      240405 14:50:52 [ERROR] mysqld got signal 6 ;
      Sorry, we probably made a mistake, and this is a bug.

      Your assistance in bug reporting will enable us to fix this for the next release.
      To report this bug, see https://mariadb.com/kb/en/reporting-bugs

      7. If CREATE SEQUENCE with cache 10000, it can load the test.sql file sucessfully.

      Attachments

        1. test.sql.zip
          3.34 MB
        2. my.cnf
          8 kB

        Issue Links

          Activity

            People

              sysprg Julius Goryavsky (Inactive)
              ktchow_ogcio Chow King Tak
              Votes:
              1 Vote for this issue
              Watchers:
              9 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2d 4.5h
                  2d 4.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.